// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpsObservabilityStack prod matches the snapshot 1`] = `
{
  "Outputs": {
    "AlarmTopicArn": {
      "Description": "SNS topic every CloudWatch alarm publishes to (page). The Teams channel webhook is subscribed out-of-band per docs/oncall.md.",
      "Value": {
        "Ref": "AlarmTopicD01E77F9",
      },
    },
    "NotifyTopicArn": {
      "Description": "SNS topic for cost guardrails + low-urgency fan-out (notify). Operator email subscription lands here, not on the page topic.",
      "Value": {
        "Ref": "NotifyTopic5FFA0016",
      },
    },
    "OncallRelayFunctionArn": {
      "Description": "Lambda that relays page topic SNS events to a Teams workflow as Adaptive Card JSON (B27). Reads workflow URL from scholars/{env}/oncall/teams-webhook-url at cold start.",
      "Value": {
        "Fn::GetAtt": [
          "OncallRelayFunction9974C7E1",
          "Arn",
        ],
      },
    },
    "WarnTopicArn": {
      "Description": "SNS topic for the P2 warn tier (data-freshness / reconciler / resource-pressure). Relayed to a separate Teams channel, falling back to the page channel if scholars/{env}/oncall/teams-webhook-url-warn is unset.",
      "Value": {
        "Ref": "WarnTopicFEEED862",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AlarmTopicD01E77F9": {
      "Properties": {
        "DisplayName": "SPS prod alarms (page)",
        "TopicName": "sps-alarms-prod",
      },
      "Type": "AWS::SNS::Topic",
    },
    "AnomalyMonitor": {
      "Properties": {
        "MonitorDimension": "SERVICE",
        "MonitorName": "sps-anomaly-monitor",
        "MonitorType": "DIMENSIONAL",
      },
      "Type": "AWS::CE::AnomalyMonitor",
    },
    "AnomalySubscription": {
      "Properties": {
        "Frequency": "IMMEDIATE",
        "MonitorArnList": [
          {
            "Ref": "AnomalyMonitor",
          },
        ],
        "Subscribers": [
          {
            "Address": {
              "Ref": "NotifyTopic5FFA0016",
            },
            "Status": "CONFIRMED",
            "Type": "SNS",
          },
        ],
        "SubscriptionName": "sps-anomaly-subscription",
        "ThresholdExpression": "{"Dimensions":{"Key":"ANOMALY_TOTAL_IMPACT_ABSOLUTE","MatchOptions":["GREATER_THAN_OR_EQUAL"],"Values":["50"]}}",
      },
      "Type": "AWS::CE::AnomalySubscription",
    },
    "AppUnavailableAlarm128C3206": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "AlarmTopicD01E77F9",
          },
        ],
        "AlarmDescription": "Public serving is degraded or down (prod): one or more of 5xx-rate / zero-healthy-hosts / task-shortfall is in ALARM. Single P1 page for the serving cascade. See docs/SLOs.md. Next: open the reliability dashboard; if Aurora CPU/connections are also high, suspect DB connection-pool exhaustion; if it tracks the last deploy, roll back (DEPLOY-RUNBOOK.md).",
        "AlarmName": "sps-app-unavailable-prod",
        "AlarmRule": {
          "Fn::Join": [
            "",
            [
              "(ALARM("",
              {
                "Fn::GetAtt": [
                  "PublicAlb5xxRateAlarmC7D5139D",
                  "Arn",
                ],
              },
              "") OR ALARM("",
              {
                "Fn::GetAtt": [
                  "PublicAlbUnhealthyHostsAlarm114335BE",
                  "Arn",
                ],
              },
              "") OR ALARM("",
              {
                "Fn::GetAtt": [
                  "EcsTaskShortfallAlarm951444EC",
                  "Arn",
                ],
              },
              ""))",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::CompositeAlarm",
    },
    "AuroraConnectionsAlarm320D1F2B": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "WarnTopicFEEED862",
          },
        ],
        "AlarmDescription": "Aurora active connection count > 70 sustained over 10m (prod). Normal peak is 60; each leaked Prisma pool adds exactly 15, and the cluster caps near 90. Most likely a one-off ECS probe/eval task that never called db.$disconnect() and is still RUNNING long after printing its output. Next: aws ecs list-tasks --cluster sps-cluster-prod --family sps-etl-prod --desired-status RUNNING, stop the zombies (read-only probes are data-safe), and watch DatabaseConnections drain. See docs/performance-baseline.md.",
        "AlarmName": "sps-aurora-connections-prod",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 2,
        "Dimensions": [
          {
            "Name": "DBClusterIdentifier",
            "Value": "sps-data-prod-auroraclusterfromsnapshot7b6a45d8-ylbuldcja7bm",
          },
        ],
        "EvaluationPeriods": 2,
        "MetricName": "DatabaseConnections",
        "Namespace": "AWS/RDS",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 70,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "AuroraCpuAlarm999C031F": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "WarnTopicFEEED862",
          },
        ],
        "AlarmDescription": "Aurora cluster CPU > 80% sustained for 10m (prod). Likely a hot query loop or runaway analytic. Next: check Performance Insights or the slow-query log; scale ACUs only if the load is legitimate.",
        "AlarmName": "sps-aurora-cpu-prod",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "Dimensions": [
          {
            "Name": "DBClusterIdentifier",
            "Value": "sps-data-prod-auroraclusterfromsnapshot7b6a45d8-ylbuldcja7bm",
          },
        ],
        "EvaluationPeriods": 3,
        "MetricName": "CPUUtilization",
        "Namespace": "AWS/RDS",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 80,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DbPoolTimeoutAlarm06C9E04F": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "AlarmTopicD01E77F9",
          },
        ],
        "AlarmDescription": "A request could not get a DB connection from the pool (prod) -- users are seeing 500s right now. If the log line says active=0 idle=0, the Aurora cluster is at its connection cap and recycling the app will NOT help. Next: check DatabaseConnections on the cluster, then stop any zombie one-off ECS tasks holding pools (see the sps-aurora-connections-prod alarm and docs/performance-baseline.md).",
        "AlarmName": "sps-db-pool-timeout-prod",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 1,
        "EvaluationPeriods": 1,
        "MetricName": "DbPoolTimeout",
        "Namespace": "SPS/Data",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 0,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DbPoolTimeoutMetricFilterEC77C148": {
      "Properties": {
        "FilterName": "sps-db-pool-timeout-prod",
        "FilterPattern": ""pool timeout"",
        "LogGroupName": {
          "Fn::ImportValue": "Sps-App-prod:ExportsOutputRefAppLogGroup7D8CD9527CC48D3E",
        },
        "MetricTransformations": [
          {
            "DefaultValue": 0,
            "MetricName": "DbPoolTimeout",
            "MetricNamespace": "SPS/Data",
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "EcsTaskShortfallAlarm951444EC": {
      "Properties": {
        "AlarmDescription": "ECS service running task count is below desired for 5 consecutive minutes (prod). Tasks died and are not being replaced. Next: check ECS service events for image-pull, capacity, or IAM failures and the recent deploy.",
        "AlarmName": "sps-ecs-task-shortfall-prod",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "EvaluationPeriods": 5,
        "Metrics": [
          {
            "Expression": "desired - running",
            "Id": "expr_1",
            "Label": "Desired - Running tasks (5m)",
            "ReturnData": true,
          },
          {
            "Id": "desired",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ClusterName",
                    "Value": {
                      "Fn::ImportValue": "Sps-App-prod:ExportsOutputRefEcsCluster97242B84553A5D8F",
                    },
                  },
                  {
                    "Name": "ServiceName",
                    "Value": {
                      "Fn::ImportValue": "Sps-App-prod:ExportsOutputFnGetAttEcsService81FC6EF6Name1D81E5BE",
                    },
                  },
                ],
                "MetricName": "DesiredTaskCount",
                "Namespace": "ECS/ContainerInsights",
              },
              "Period": 60,
              "Stat": "Maximum",
            },
            "ReturnData": false,
          },
          {
            "Id": "running",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ClusterName",
                    "Value": {
                      "Fn::ImportValue": "Sps-App-prod:ExportsOutputRefEcsCluster97242B84553A5D8F",
                    },
                  },
                  {
                    "Name": "ServiceName",
                    "Value": {
                      "Fn::ImportValue": "Sps-App-prod:ExportsOutputFnGetAttEcsService81FC6EF6Name1D81E5BE",
                    },
                  },
                ],
                "MetricName": "RunningTaskCount",
                "Namespace": "ECS/ContainerInsights",
              },
              "Period": 60,
              "Stat": "Minimum",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 0,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "EditAuthzDeniedAlarm19EBB8B8": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "WarnTopicFEEED862",
          },
        ],
        "AlarmDescription": "Edit-surface 403 (edit_authz_denied) count > 10 in any 5m window for 2 consecutive windows (prod). Sustained rate -- predicate bug or active probing. See docs/SLOs.md. Next: check for an authz-predicate regression in the last deploy, or active probing; review the edit_authz_denied logs for the actor and path.",
        "AlarmName": "sps-edit-authz-denied-prod",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 2,
        "EvaluationPeriods": 2,
        "MetricName": "EditAuthzDenied",
        "Namespace": "SPS/Auth",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "EditAuthzDeniedMetricFilterC5F6CB25": {
      "Properties": {
        "FilterName": "sps-edit-authz-denied-prod",
        "FilterPattern": "{ $.event = "edit_authz_denied" }",
        "LogGroupName": {
          "Fn::ImportValue": "Sps-App-prod:ExportsOutputRefAppLogGroup7D8CD9527CC48D3E",
        },
        "MetricTransformations": [
          {
            "DefaultValue": 0,
            "MetricName": "EditAuthzDenied",
            "MetricNamespace": "SPS/Auth",
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "EtlFailuresRelaySubscriptionD17272A2": {
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "OncallRelayFunction9974C7E1",
            "Arn",
          ],
        },
        "Protocol": "lambda",
        "TopicArn": {
          "Fn::ImportValue": "Sps-Etl-prod:ExportsOutputRefEtlFailureTopic8361D0D072A9D80D",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "EtlPageRelaySubscription284818E2": {
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "OncallRelayFunction9974C7E1",
            "Arn",
          ],
        },
        "Protocol": "lambda",
        "TopicArn": {
          "Fn::ImportValue": "Sps-Etl-prod:ExportsOutputRefEtlPageTopic608308D6173DA1E0",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "MonthlyBudget": {
      "Properties": {
        "Budget": {
          "BudgetLimit": {
            "Amount": 600,
            "Unit": "USD",
          },
          "BudgetName": "sps-monthly-budget",
          "BudgetType": "COST",
          "TimeUnit": "MONTHLY",
        },
        "NotificationsWithSubscribers": [
          {
            "Notification": {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "FORECASTED",
              "Threshold": 50,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": [
              {
                "Address": {
                  "Ref": "NotifyTopic5FFA0016",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
          {
            "Notification": {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "FORECASTED",
              "Threshold": 80,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": [
              {
                "Address": {
                  "Ref": "NotifyTopic5FFA0016",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
          {
            "Notification": {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 100,
              "ThresholdType": "PERCENTAGE",
            },
            "Subscribers": [
              {
                "Address": {
                  "Ref": "NotifyTopic5FFA0016",
                },
                "SubscriptionType": "SNS",
              },
            ],
          },
        ],
      },
      "Type": "AWS::Budgets::Budget",
    },
    "NotifyTopic5FFA0016": {
      "Properties": {
        "DisplayName": "SPS prod notifications (notify)",
        "TopicName": "sps-notify-prod",
      },
      "Type": "AWS::SNS::Topic",
    },
    "NotifyTopicPolicy23E22CE3": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sns:Publish",
              "Effect": "Allow",
              "Principal": {
                "Service": "budgets.amazonaws.com",
              },
              "Resource": {
                "Ref": "NotifyTopic5FFA0016",
              },
              "Sid": "0",
            },
            {
              "Action": "sns:Publish",
              "Effect": "Allow",
              "Principal": {
                "Service": "costalerts.amazonaws.com",
              },
              "Resource": {
                "Ref": "NotifyTopic5FFA0016",
              },
              "Sid": "1",
            },
          ],
          "Version": "2012-10-17",
        },
        "Topics": [
          {
            "Ref": "NotifyTopic5FFA0016",
          },
        ],
      },
      "Type": "AWS::SNS::TopicPolicy",
    },
    "NotifyTopicpaa2013medcornelledu2E34CAB1": {
      "Properties": {
        "Endpoint": "paa2013@med.cornell.edu",
        "Protocol": "email",
        "TopicArn": {
          "Ref": "NotifyTopic5FFA0016",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "OncallRelayErrorsD5425B8E": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "NotifyTopic5FFA0016",
          },
        ],
        "AlarmDescription": "On-call relay Lambda surfaced one or more invocation errors in the last minute (prod). Paging-path delivery is at risk -- check Lambda CloudWatch logs and the Teams workflow URL in Secrets Manager. Routed to the notify topic (email) because the page topic flows through this Lambda.",
        "AlarmName": "sps-oncall-relay-errors-prod",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 1,
        "Dimensions": [
          {
            "Name": "FunctionName",
            "Value": {
              "Ref": "OncallRelayFunction9974C7E1",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "Errors",
        "Namespace": "AWS/Lambda",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "OncallRelayFunction9974C7E1": {
      "DependsOn": [
        "OncallRelayFunctionServiceRoleDefaultPolicy2861895F",
        "OncallRelayFunctionServiceRole66F12272",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "17a03f020da9b01a893dde74941b93f2b502064f610b4bfc4f51b2df343bc16c.zip",
        },
        "Environment": {
          "Variables": {
            "TEAMS_WARN_WEBHOOK_SECRET_ARN": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":secretsmanager:us-east-1:123456789012:secret:scholars/prod/oncall/teams-webhook-url-warn",
                ],
              ],
            },
            "TEAMS_WEBHOOK_SECRET_ARN": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":secretsmanager:us-east-1:123456789012:secret:scholars/prod/oncall/teams-webhook-url",
                ],
              ],
            },
          },
        },
        "FunctionName": "sps-oncall-relay-prod",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "OncallRelayLogGroup260778A1",
          },
        },
        "MemorySize": 256,
        "Role": {
          "Fn::GetAtt": [
            "OncallRelayFunctionServiceRole66F12272",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 10,
      },
      "Type": "AWS::Lambda::Function",
    },
    "OncallRelayFunctionAlarmTopic6B29E7EA": {
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "OncallRelayFunction9974C7E1",
            "Arn",
          ],
        },
        "Protocol": "lambda",
        "TopicArn": {
          "Ref": "AlarmTopicD01E77F9",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "OncallRelayFunctionAllowEtlFailuresTopicInvokeB671B872": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "OncallRelayFunction9974C7E1",
            "Arn",
          ],
        },
        "Principal": "sns.amazonaws.com",
        "SourceArn": {
          "Fn::ImportValue": "Sps-Etl-prod:ExportsOutputRefEtlFailureTopic8361D0D072A9D80D",
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OncallRelayFunctionAllowEtlPageTopicInvoke02FC50C1": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "OncallRelayFunction9974C7E1",
            "Arn",
          ],
        },
        "Principal": "sns.amazonaws.com",
        "SourceArn": {
          "Fn::ImportValue": "Sps-Etl-prod:ExportsOutputRefEtlPageTopic608308D6173DA1E0",
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OncallRelayFunctionAllowInvokeSpsObservabilityprodAlarmTopic4D01AF6E49B56A35": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "OncallRelayFunction9974C7E1",
            "Arn",
          ],
        },
        "Principal": "sns.amazonaws.com",
        "SourceArn": {
          "Ref": "AlarmTopicD01E77F9",
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OncallRelayFunctionAllowInvokeSpsObservabilityprodWarnTopicFDB460DBF3E11FA4": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "OncallRelayFunction9974C7E1",
            "Arn",
          ],
        },
        "Principal": "sns.amazonaws.com",
        "SourceArn": {
          "Ref": "WarnTopicFEEED862",
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OncallRelayFunctionServiceRole66F12272": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "OncallRelayFunctionServiceRoleDefaultPolicy2861895F": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:us-east-1:123456789012:secret:scholars/prod/oncall/teams-webhook-url-??????",
                  ],
                ],
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:us-east-1:123456789012:secret:scholars/prod/oncall/teams-webhook-url-warn-??????",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "OncallRelayFunctionServiceRoleDefaultPolicy2861895F",
        "Roles": [
          {
            "Ref": "OncallRelayFunctionServiceRole66F12272",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "OncallRelayFunctionWarnTopicFC283EAE": {
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "OncallRelayFunction9974C7E1",
            "Arn",
          ],
        },
        "Protocol": "lambda",
        "TopicArn": {
          "Ref": "WarnTopicFEEED862",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "OncallRelayLogGroup260778A1": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": "/aws/lambda/sps-oncall-relay-prod",
        "RetentionInDays": 30,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "OpenSearchBreakerAlarm0D13D3F1": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "WarnTopicFEEED862",
          },
        ],
        "AlarmDescription": "OpenSearch refused a query with circuit_breaking_exception (prod) -- the parent breaker tripped at 95% of heap and the app returned 502. Next: check JVMMemoryPressure Maximum on the domain; the node is undersized or a query burst (e.g. the sponsor-match fan-out) is too heavy for the heap.",
        "AlarmName": "sps-opensearch-breaker-prod",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 1,
        "EvaluationPeriods": 1,
        "MetricName": "OpenSearchCircuitBreaker",
        "Namespace": "SPS/Search",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 0,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "OpenSearchBreakerMetricFilter2EF567D5": {
      "Properties": {
        "FilterName": "sps-opensearch-breaker-prod",
        "FilterPattern": ""circuit_breaking_exception"",
        "LogGroupName": {
          "Fn::ImportValue": "Sps-App-prod:ExportsOutputRefAppLogGroup7D8CD9527CC48D3E",
        },
        "MetricTransformations": [
          {
            "DefaultValue": 0,
            "MetricName": "OpenSearchCircuitBreaker",
            "MetricNamespace": "SPS/Search",
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "OpenSearchClusterRedAlarm2725A3FB": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "AlarmTopicD01E77F9",
          },
        ],
        "AlarmDescription": "OpenSearch cluster status is RED (prod). Shards unassigned -- searches affected. Next: check OpenSearch _cluster/health; reallocate or restore the affected index from snapshot.",
        "AlarmName": "sps-opensearch-cluster-red-prod",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 1,
        "Dimensions": [
          {
            "Name": "ClientId",
            "Value": "123456789012",
          },
          {
            "Name": "DomainName",
            "Value": "opensearchshare-hr8gdfznbeww",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ClusterStatus.red",
        "Namespace": "AWS/ES",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "OpenSearchJvmPressureAlarm9A9BC8E1": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "WarnTopicFEEED862",
          },
        ],
        "AlarmDescription": "OpenSearch JVM memory pressure > 85% for 15m (prod). GC pressure will cascade into query latency. Next: check shard count and query load on the dashboard; throttle heavy queries or scale the domain.",
        "AlarmName": "sps-opensearch-jvm-pressure-prod",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "Dimensions": [
          {
            "Name": "ClientId",
            "Value": "123456789012",
          },
          {
            "Name": "DomainName",
            "Value": "opensearchshare-hr8gdfznbeww",
          },
        ],
        "EvaluationPeriods": 3,
        "MetricName": "JVMMemoryPressure",
        "Namespace": "AWS/ES",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 85,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "PublicAlb5xxRateAlarmC7D5139D": {
      "Properties": {
        "AlarmDescription": "Public ALB target 5xx rate exceeds 1% over 5m (prod). Burns the 99.5% availability SLO budget. See docs/SLOs.md. Next: check the ALB 5xx panel and the most recent deploy; roll back if the spike tracks a release, else pull app logs for the failing route.",
        "AlarmName": "sps-alb-5xx-rate-prod",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 2,
        "EvaluationPeriods": 2,
        "Metrics": [
          {
            "Expression": "IF(m5xx >= 5, (m5xx / IF(reqs > 0, reqs, 1)) * 100, 0)",
            "Id": "expr_1",
            "Label": "5xx rate (%) over 5m",
            "ReturnData": true,
          },
          {
            "Id": "m5xx",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "LoadBalancer",
                    "Value": "app/Sps-Ap-Publi-dZ0soKIosV6j/a43ae4ad91d52643",
                  },
                ],
                "MetricName": "HTTPCode_Target_5XX_Count",
                "Namespace": "AWS/ApplicationELB",
              },
              "Period": 300,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
          {
            "Id": "reqs",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "LoadBalancer",
                    "Value": "app/Sps-Ap-Publi-dZ0soKIosV6j/a43ae4ad91d52643",
                  },
                ],
                "MetricName": "RequestCount",
                "Namespace": "AWS/ApplicationELB",
              },
              "Period": 300,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "PublicAlbLatencyP99AlarmC30883BF": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "AlarmTopicD01E77F9",
          },
        ],
        "AlarmDescription": "Public ALB target response time p99 > 1500ms over 5m (prod). Burns the latency SLO budget. See docs/SLOs.md. Next: open the reliability dashboard latency and Aurora SelectLatency panels; look for a slow query, a cold cache, or an undersized task.",
        "AlarmName": "sps-alb-latency-p99-prod",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "Dimensions": [
          {
            "Name": "LoadBalancer",
            "Value": "app/Sps-Ap-Publi-dZ0soKIosV6j/a43ae4ad91d52643",
          },
        ],
        "EvaluationPeriods": 3,
        "ExtendedStatistic": "p99",
        "MetricName": "TargetResponseTime",
        "Namespace": "AWS/ApplicationELB",
        "Period": 300,
        "Threshold": 1.5,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "PublicAlbUnhealthyHostsAlarm114335BE": {
      "Properties": {
        "AlarmDescription": "Public ALB has zero healthy targets for 5 consecutive minutes (prod). Circuit-breaker did not catch it -- real outage. Next: check ECS task health, the in-flight deploy, and the target-group health-check path.",
        "AlarmName": "sps-alb-unhealthy-hosts-prod",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "LoadBalancer",
            "Value": "app/Sps-Ap-Publi-dZ0soKIosV6j/a43ae4ad91d52643",
          },
          {
            "Name": "TargetGroup",
            "Value": "targetgroup/Sps-Ap-Publi-TL07SCGAWNJM/4cc4b1d7b17c0f8c",
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "UnHealthyHostCount",
        "Namespace": "AWS/ApplicationELB",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ReliabilityDashboard474761FC": {
      "Properties": {
        "DashboardBody": {
          "Fn::Join": [
            "",
            [
              "{"widgets":[{"type":"text","width":24,"height":2,"x":0,"y":0,"properties":{"markdown":"# SPS reliability -- prod\\nALB / CloudFront / ECS / Aurora. Read-only mirror of the page-topic alarms. See docs/SLOs.md."}},{"type":"text","width":24,"height":1,"x":0,"y":2,"properties":{"markdown":"## Public ALB"}},{"type":"metric","width":12,"height":6,"x":0,"y":3,"properties":{"view":"timeSeries","title":"ALB latency p50/p90/p99 (s)","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["AWS/ApplicationELB","TargetResponseTime","LoadBalancer","app/Sps-Ap-Publi-dZ0soKIosV6j/a43ae4ad91d52643",{"label":"p50","stat":"p50"}],["AWS/ApplicationELB","TargetResponseTime","LoadBalancer","app/Sps-Ap-Publi-dZ0soKIosV6j/a43ae4ad91d52643",{"label":"p90","stat":"p90"}],["AWS/ApplicationELB","TargetResponseTime","LoadBalancer","app/Sps-Ap-Publi-dZ0soKIosV6j/a43ae4ad91d52643",{"label":"p99","stat":"p99"}]],"yAxis":{"left":{"min":0,"label":"seconds"}}}},{"type":"metric","width":12,"height":6,"x":12,"y":3,"properties":{"view":"timeSeries","title":"ALB requests + 5xx/4xx (5m sum)","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["AWS/ApplicationELB","RequestCount","LoadBalancer","app/Sps-Ap-Publi-dZ0soKIosV6j/a43ae4ad91d52643",{"label":"Requests","stat":"Sum"}],["AWS/ApplicationELB","HTTPCode_Target_5XX_Count","LoadBalancer","app/Sps-Ap-Publi-dZ0soKIosV6j/a43ae4ad91d52643",{"label":"Target 5xx","stat":"Sum","yAxis":"right"}],["AWS/ApplicationELB","HTTPCode_Target_4XX_Count","LoadBalancer","app/Sps-Ap-Publi-dZ0soKIosV6j/a43ae4ad91d52643",{"label":"Target 4xx","stat":"Sum","yAxis":"right"}],["AWS/ApplicationELB","HTTPCode_ELB_5XX_Count","LoadBalancer","app/Sps-Ap-Publi-dZ0soKIosV6j/a43ae4ad91d52643",{"label":"ELB 5xx","stat":"Sum","yAxis":"right"}]],"yAxis":{"left":{"min":0,"label":"requests"},"right":{"min":0,"label":"errors"}}}},{"type":"text","width":24,"height":1,"x":0,"y":9,"properties":{"markdown":"## CloudFront edge"}},{"type":"metric","width":8,"height":6,"x":0,"y":10,"properties":{"view":"timeSeries","title":"CloudFront origin latency (ms)","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["AWS/CloudFront","OriginLatency","DistributionId","E28NKDFXC7K2ZL","Region","Global",{"label":"Origin latency avg","region":"us-east-1"}],["AWS/CloudFront","OriginLatency","DistributionId","E28NKDFXC7K2ZL","Region","Global",{"label":"Origin latency p99","region":"us-east-1","stat":"p99"}]],"yAxis":{"left":{"min":0,"label":"ms"}}}},{"type":"metric","width":8,"height":6,"x":8,"y":10,"properties":{"view":"timeSeries","title":"CloudFront error rate (%) + requests","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["AWS/CloudFront","TotalErrorRate","DistributionId","E28NKDFXC7K2ZL","Region","Global",{"label":"Total error rate","region":"us-east-1"}],["AWS/CloudFront","4xxErrorRate","DistributionId","E28NKDFXC7K2ZL","Region","Global",{"label":"4xx rate","region":"us-east-1"}],["AWS/CloudFront","5xxErrorRate","DistributionId","E28NKDFXC7K2ZL","Region","Global",{"label":"5xx rate","region":"us-east-1"}],["AWS/CloudFront","Requests","DistributionId","E28NKDFXC7K2ZL","Region","Global",{"label":"Requests","region":"us-east-1","stat":"Sum","yAxis":"right"}]],"yAxis":{"left":{"min":0,"max":100,"label":"percent"},"right":{"min":0,"label":"requests"}}}},{"type":"metric","width":8,"height":6,"x":16,"y":10,"properties":{"view":"timeSeries","title":"CloudFront bytes downloaded (5m sum)","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["AWS/CloudFront","BytesDownloaded","DistributionId","E28NKDFXC7K2ZL","Region","Global",{"label":"Bytes downloaded","region":"us-east-1","stat":"Sum"}]],"yAxis":{"left":{"min":0,"label":"bytes"}}}},{"type":"text","width":24,"height":1,"x":0,"y":16,"properties":{"markdown":"## ECS service"}},{"type":"metric","width":12,"height":6,"x":0,"y":17,"properties":{"view":"timeSeries","title":"ECS CPU / Memory (%)","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["AWS/ECS","CPUUtilization","ClusterName","",
              {
                "Fn::ImportValue": "Sps-App-prod:ExportsOutputRefEcsCluster97242B84553A5D8F",
              },
              "","ServiceName","",
              {
                "Fn::ImportValue": "Sps-App-prod:ExportsOutputFnGetAttEcsService81FC6EF6Name1D81E5BE",
              },
              "",{"label":"CPU %"}],["AWS/ECS","MemoryUtilization","ClusterName","",
              {
                "Fn::ImportValue": "Sps-App-prod:ExportsOutputRefEcsCluster97242B84553A5D8F",
              },
              "","ServiceName","",
              {
                "Fn::ImportValue": "Sps-App-prod:ExportsOutputFnGetAttEcsService81FC6EF6Name1D81E5BE",
              },
              "",{"label":"Memory %"}]],"yAxis":{"left":{"min":0,"max":100,"label":"percent"}}}},{"type":"metric","width":12,"height":6,"x":12,"y":17,"properties":{"view":"timeSeries","title":"ECS running vs desired tasks","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["ECS/ContainerInsights","RunningTaskCount","ClusterName","",
              {
                "Fn::ImportValue": "Sps-App-prod:ExportsOutputRefEcsCluster97242B84553A5D8F",
              },
              "","ServiceName","",
              {
                "Fn::ImportValue": "Sps-App-prod:ExportsOutputFnGetAttEcsService81FC6EF6Name1D81E5BE",
              },
              "",{"label":"Running (min)","period":60,"stat":"Minimum"}],["ECS/ContainerInsights","DesiredTaskCount","ClusterName","",
              {
                "Fn::ImportValue": "Sps-App-prod:ExportsOutputRefEcsCluster97242B84553A5D8F",
              },
              "","ServiceName","",
              {
                "Fn::ImportValue": "Sps-App-prod:ExportsOutputFnGetAttEcsService81FC6EF6Name1D81E5BE",
              },
              "",{"label":"Desired (max)","period":60,"stat":"Maximum"}]],"yAxis":{"left":{"min":0,"label":"tasks"}}}},{"type":"text","width":24,"height":1,"x":0,"y":23,"properties":{"markdown":"## Aurora cluster"}},{"type":"metric","width":8,"height":6,"x":0,"y":24,"properties":{"view":"timeSeries","title":"Aurora CPU (%)","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["AWS/RDS","CPUUtilization","DBClusterIdentifier","sps-data-prod-auroraclusterfromsnapshot7b6a45d8-ylbuldcja7bm",{"label":"CPU %"}]],"yAxis":{"left":{"min":0,"max":100,"label":"percent"}}}},{"type":"metric","width":8,"height":6,"x":8,"y":24,"properties":{"view":"timeSeries","title":"Aurora connections","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["AWS/RDS","DatabaseConnections","DBClusterIdentifier","sps-data-prod-auroraclusterfromsnapshot7b6a45d8-ylbuldcja7bm",{"label":"Connections (max)","stat":"Maximum"}]],"yAxis":{"left":{"min":0,"label":"connections"}}}},{"type":"metric","width":8,"height":6,"x":16,"y":24,"properties":{"view":"timeSeries","title":"Aurora SelectLatency (ms)","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["AWS/RDS","SelectLatency","DBClusterIdentifier","sps-data-prod-auroraclusterfromsnapshot7b6a45d8-ylbuldcja7bm",{"label":"Select latency"}]],"yAxis":{"left":{"min":0,"label":"ms"}}}}]}",
            ],
          ],
        },
        "DashboardName": "sps-reliability-prod",
      },
      "Type": "AWS::CloudWatch::Dashboard",
    },
    "WarnTopicFEEED862": {
      "Properties": {
        "DisplayName": "SPS prod warnings (P2)",
        "TopicName": "sps-warn-prod",
      },
      "Type": "AWS::SNS::Topic",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`SpsObservabilityStack staging matches the snapshot 1`] = `
{
  "Outputs": {
    "AlarmTopicArn": {
      "Description": "SNS topic every CloudWatch alarm publishes to (page). The Teams channel webhook is subscribed out-of-band per docs/oncall.md.",
      "Value": {
        "Ref": "AlarmTopicD01E77F9",
      },
    },
    "NotifyTopicArn": {
      "Description": "SNS topic for cost guardrails + low-urgency fan-out (notify). Operator email subscription lands here, not on the page topic.",
      "Value": {
        "Ref": "NotifyTopic5FFA0016",
      },
    },
    "OncallRelayFunctionArn": {
      "Description": "Lambda that relays page topic SNS events to a Teams workflow as Adaptive Card JSON (B27). Reads workflow URL from scholars/{env}/oncall/teams-webhook-url at cold start.",
      "Value": {
        "Fn::GetAtt": [
          "OncallRelayFunction9974C7E1",
          "Arn",
        ],
      },
    },
    "WarnTopicArn": {
      "Description": "SNS topic for the P2 warn tier (data-freshness / reconciler / resource-pressure). Relayed to a separate Teams channel, falling back to the page channel if scholars/{env}/oncall/teams-webhook-url-warn is unset.",
      "Value": {
        "Ref": "WarnTopicFEEED862",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AlarmTopicD01E77F9": {
      "Properties": {
        "DisplayName": "SPS staging alarms (page)",
        "TopicName": "sps-alarms-staging",
      },
      "Type": "AWS::SNS::Topic",
    },
    "AppUnavailableAlarm128C3206": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "AlarmTopicD01E77F9",
          },
        ],
        "AlarmDescription": "Public serving is degraded or down (staging): one or more of 5xx-rate / zero-healthy-hosts / task-shortfall is in ALARM. Single P1 page for the serving cascade. See docs/SLOs.md. Next: open the reliability dashboard; if Aurora CPU/connections are also high, suspect DB connection-pool exhaustion; if it tracks the last deploy, roll back (DEPLOY-RUNBOOK.md).",
        "AlarmName": "sps-app-unavailable-staging",
        "AlarmRule": {
          "Fn::Join": [
            "",
            [
              "(ALARM("",
              {
                "Fn::GetAtt": [
                  "PublicAlb5xxRateAlarmC7D5139D",
                  "Arn",
                ],
              },
              "") OR ALARM("",
              {
                "Fn::GetAtt": [
                  "PublicAlbUnhealthyHostsAlarm114335BE",
                  "Arn",
                ],
              },
              "") OR ALARM("",
              {
                "Fn::GetAtt": [
                  "EcsTaskShortfallAlarm951444EC",
                  "Arn",
                ],
              },
              ""))",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::CompositeAlarm",
    },
    "AuroraConnectionsAlarm320D1F2B": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "WarnTopicFEEED862",
          },
        ],
        "AlarmDescription": "Aurora active connection count > 70 sustained over 10m (staging). Normal peak is 60; each leaked Prisma pool adds exactly 15, and the cluster caps near 90. Most likely a one-off ECS probe/eval task that never called db.$disconnect() and is still RUNNING long after printing its output. Next: aws ecs list-tasks --cluster sps-cluster-staging --family sps-etl-staging --desired-status RUNNING, stop the zombies (read-only probes are data-safe), and watch DatabaseConnections drain. See docs/performance-baseline.md.",
        "AlarmName": "sps-aurora-connections-staging",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 2,
        "Dimensions": [
          {
            "Name": "DBClusterIdentifier",
            "Value": "sps-data-staging-auroraclusterfromsnapshot7b6a45d8-8kp4eh79cfrn",
          },
        ],
        "EvaluationPeriods": 2,
        "MetricName": "DatabaseConnections",
        "Namespace": "AWS/RDS",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 70,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "AuroraCpuAlarm999C031F": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "WarnTopicFEEED862",
          },
        ],
        "AlarmDescription": "Aurora cluster CPU > 80% sustained for 10m (staging). Likely a hot query loop or runaway analytic. Next: check Performance Insights or the slow-query log; scale ACUs only if the load is legitimate.",
        "AlarmName": "sps-aurora-cpu-staging",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "Dimensions": [
          {
            "Name": "DBClusterIdentifier",
            "Value": "sps-data-staging-auroraclusterfromsnapshot7b6a45d8-8kp4eh79cfrn",
          },
        ],
        "EvaluationPeriods": 3,
        "MetricName": "CPUUtilization",
        "Namespace": "AWS/RDS",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 80,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DbPoolTimeoutAlarm06C9E04F": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "AlarmTopicD01E77F9",
          },
        ],
        "AlarmDescription": "A request could not get a DB connection from the pool (staging) -- users are seeing 500s right now. If the log line says active=0 idle=0, the Aurora cluster is at its connection cap and recycling the app will NOT help. Next: check DatabaseConnections on the cluster, then stop any zombie one-off ECS tasks holding pools (see the sps-aurora-connections-staging alarm and docs/performance-baseline.md).",
        "AlarmName": "sps-db-pool-timeout-staging",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 1,
        "EvaluationPeriods": 1,
        "MetricName": "DbPoolTimeout",
        "Namespace": "SPS/Data",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 0,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DbPoolTimeoutMetricFilterEC77C148": {
      "Properties": {
        "FilterName": "sps-db-pool-timeout-staging",
        "FilterPattern": ""pool timeout"",
        "LogGroupName": {
          "Fn::ImportValue": "Sps-App-staging:ExportsOutputRefAppLogGroup7D8CD9527CC48D3E",
        },
        "MetricTransformations": [
          {
            "DefaultValue": 0,
            "MetricName": "DbPoolTimeout",
            "MetricNamespace": "SPS/Data",
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "EcsTaskShortfallAlarm951444EC": {
      "Properties": {
        "AlarmDescription": "ECS service running task count is below desired for 5 consecutive minutes (staging). Tasks died and are not being replaced. Next: check ECS service events for image-pull, capacity, or IAM failures and the recent deploy.",
        "AlarmName": "sps-ecs-task-shortfall-staging",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "EvaluationPeriods": 5,
        "Metrics": [
          {
            "Expression": "desired - running",
            "Id": "expr_1",
            "Label": "Desired - Running tasks (5m)",
            "ReturnData": true,
          },
          {
            "Id": "desired",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ClusterName",
                    "Value": {
                      "Fn::ImportValue": "Sps-App-staging:ExportsOutputRefEcsCluster97242B84553A5D8F",
                    },
                  },
                  {
                    "Name": "ServiceName",
                    "Value": {
                      "Fn::ImportValue": "Sps-App-staging:ExportsOutputFnGetAttEcsService81FC6EF6Name1D81E5BE",
                    },
                  },
                ],
                "MetricName": "DesiredTaskCount",
                "Namespace": "ECS/ContainerInsights",
              },
              "Period": 60,
              "Stat": "Maximum",
            },
            "ReturnData": false,
          },
          {
            "Id": "running",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ClusterName",
                    "Value": {
                      "Fn::ImportValue": "Sps-App-staging:ExportsOutputRefEcsCluster97242B84553A5D8F",
                    },
                  },
                  {
                    "Name": "ServiceName",
                    "Value": {
                      "Fn::ImportValue": "Sps-App-staging:ExportsOutputFnGetAttEcsService81FC6EF6Name1D81E5BE",
                    },
                  },
                ],
                "MetricName": "RunningTaskCount",
                "Namespace": "ECS/ContainerInsights",
              },
              "Period": 60,
              "Stat": "Minimum",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 0,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "EditAuthzDeniedAlarm19EBB8B8": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "WarnTopicFEEED862",
          },
        ],
        "AlarmDescription": "Edit-surface 403 (edit_authz_denied) count > 10 in any 5m window for 2 consecutive windows (staging). Sustained rate -- predicate bug or active probing. See docs/SLOs.md. Next: check for an authz-predicate regression in the last deploy, or active probing; review the edit_authz_denied logs for the actor and path.",
        "AlarmName": "sps-edit-authz-denied-staging",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 2,
        "EvaluationPeriods": 2,
        "MetricName": "EditAuthzDenied",
        "Namespace": "SPS/Auth",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "EditAuthzDeniedMetricFilterC5F6CB25": {
      "Properties": {
        "FilterName": "sps-edit-authz-denied-staging",
        "FilterPattern": "{ $.event = "edit_authz_denied" }",
        "LogGroupName": {
          "Fn::ImportValue": "Sps-App-staging:ExportsOutputRefAppLogGroup7D8CD9527CC48D3E",
        },
        "MetricTransformations": [
          {
            "DefaultValue": 0,
            "MetricName": "EditAuthzDenied",
            "MetricNamespace": "SPS/Auth",
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "EtlFailuresRelaySubscriptionD17272A2": {
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "OncallRelayFunction9974C7E1",
            "Arn",
          ],
        },
        "Protocol": "lambda",
        "TopicArn": {
          "Fn::ImportValue": "Sps-Etl-staging:ExportsOutputRefEtlFailureTopic8361D0D072A9D80D",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "EtlPageRelaySubscription284818E2": {
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "OncallRelayFunction9974C7E1",
            "Arn",
          ],
        },
        "Protocol": "lambda",
        "TopicArn": {
          "Fn::ImportValue": "Sps-Etl-staging:ExportsOutputRefEtlPageTopic608308D6173DA1E0",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "NotifyTopic5FFA0016": {
      "Properties": {
        "DisplayName": "SPS staging notifications (notify)",
        "TopicName": "sps-notify-staging",
      },
      "Type": "AWS::SNS::Topic",
    },
    "NotifyTopicpaa2013medcornelledu2E34CAB1": {
      "Properties": {
        "Endpoint": "paa2013@med.cornell.edu",
        "Protocol": "email",
        "TopicArn": {
          "Ref": "NotifyTopic5FFA0016",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "OncallRelayErrorsD5425B8E": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "NotifyTopic5FFA0016",
          },
        ],
        "AlarmDescription": "On-call relay Lambda surfaced one or more invocation errors in the last minute (staging). Paging-path delivery is at risk -- check Lambda CloudWatch logs and the Teams workflow URL in Secrets Manager. Routed to the notify topic (email) because the page topic flows through this Lambda.",
        "AlarmName": "sps-oncall-relay-errors-staging",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 1,
        "Dimensions": [
          {
            "Name": "FunctionName",
            "Value": {
              "Ref": "OncallRelayFunction9974C7E1",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "Errors",
        "Namespace": "AWS/Lambda",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "OncallRelayFunction9974C7E1": {
      "DependsOn": [
        "OncallRelayFunctionServiceRoleDefaultPolicy2861895F",
        "OncallRelayFunctionServiceRole66F12272",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "17a03f020da9b01a893dde74941b93f2b502064f610b4bfc4f51b2df343bc16c.zip",
        },
        "Environment": {
          "Variables": {
            "TEAMS_WARN_WEBHOOK_SECRET_ARN": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":secretsmanager:us-east-1:123456789012:secret:scholars/staging/oncall/teams-webhook-url-warn",
                ],
              ],
            },
            "TEAMS_WEBHOOK_SECRET_ARN": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":secretsmanager:us-east-1:123456789012:secret:scholars/staging/oncall/teams-webhook-url",
                ],
              ],
            },
          },
        },
        "FunctionName": "sps-oncall-relay-staging",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "OncallRelayLogGroup260778A1",
          },
        },
        "MemorySize": 256,
        "Role": {
          "Fn::GetAtt": [
            "OncallRelayFunctionServiceRole66F12272",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 10,
      },
      "Type": "AWS::Lambda::Function",
    },
    "OncallRelayFunctionAlarmTopic6B29E7EA": {
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "OncallRelayFunction9974C7E1",
            "Arn",
          ],
        },
        "Protocol": "lambda",
        "TopicArn": {
          "Ref": "AlarmTopicD01E77F9",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "OncallRelayFunctionAllowEtlFailuresTopicInvokeB671B872": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "OncallRelayFunction9974C7E1",
            "Arn",
          ],
        },
        "Principal": "sns.amazonaws.com",
        "SourceArn": {
          "Fn::ImportValue": "Sps-Etl-staging:ExportsOutputRefEtlFailureTopic8361D0D072A9D80D",
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OncallRelayFunctionAllowEtlPageTopicInvoke02FC50C1": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "OncallRelayFunction9974C7E1",
            "Arn",
          ],
        },
        "Principal": "sns.amazonaws.com",
        "SourceArn": {
          "Fn::ImportValue": "Sps-Etl-staging:ExportsOutputRefEtlPageTopic608308D6173DA1E0",
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OncallRelayFunctionAllowInvokeSpsObservabilitystagingAlarmTopicB2A49C20BFB9DD1C": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "OncallRelayFunction9974C7E1",
            "Arn",
          ],
        },
        "Principal": "sns.amazonaws.com",
        "SourceArn": {
          "Ref": "AlarmTopicD01E77F9",
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OncallRelayFunctionAllowInvokeSpsObservabilitystagingWarnTopic55AD92C81249F5FD": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "OncallRelayFunction9974C7E1",
            "Arn",
          ],
        },
        "Principal": "sns.amazonaws.com",
        "SourceArn": {
          "Ref": "WarnTopicFEEED862",
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "OncallRelayFunctionServiceRole66F12272": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "OncallRelayFunctionServiceRoleDefaultPolicy2861895F": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:us-east-1:123456789012:secret:scholars/staging/oncall/teams-webhook-url-??????",
                  ],
                ],
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:us-east-1:123456789012:secret:scholars/staging/oncall/teams-webhook-url-warn-??????",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "OncallRelayFunctionServiceRoleDefaultPolicy2861895F",
        "Roles": [
          {
            "Ref": "OncallRelayFunctionServiceRole66F12272",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "OncallRelayFunctionWarnTopicFC283EAE": {
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "OncallRelayFunction9974C7E1",
            "Arn",
          ],
        },
        "Protocol": "lambda",
        "TopicArn": {
          "Ref": "WarnTopicFEEED862",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "OncallRelayLogGroup260778A1": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": "/aws/lambda/sps-oncall-relay-staging",
        "RetentionInDays": 30,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "OpenSearchBreakerAlarm0D13D3F1": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "WarnTopicFEEED862",
          },
        ],
        "AlarmDescription": "OpenSearch refused a query with circuit_breaking_exception (staging) -- the parent breaker tripped at 95% of heap and the app returned 502. Next: check JVMMemoryPressure Maximum on the domain; the node is undersized or a query burst (e.g. the sponsor-match fan-out) is too heavy for the heap.",
        "AlarmName": "sps-opensearch-breaker-staging",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 1,
        "EvaluationPeriods": 1,
        "MetricName": "OpenSearchCircuitBreaker",
        "Namespace": "SPS/Search",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 0,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "OpenSearchBreakerMetricFilter2EF567D5": {
      "Properties": {
        "FilterName": "sps-opensearch-breaker-staging",
        "FilterPattern": ""circuit_breaking_exception"",
        "LogGroupName": {
          "Fn::ImportValue": "Sps-App-staging:ExportsOutputRefAppLogGroup7D8CD9527CC48D3E",
        },
        "MetricTransformations": [
          {
            "DefaultValue": 0,
            "MetricName": "OpenSearchCircuitBreaker",
            "MetricNamespace": "SPS/Search",
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "OpenSearchClusterRedAlarm2725A3FB": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "AlarmTopicD01E77F9",
          },
        ],
        "AlarmDescription": "OpenSearch cluster status is RED (staging). Shards unassigned -- searches affected. Next: check OpenSearch _cluster/health; reallocate or restore the affected index from snapshot.",
        "AlarmName": "sps-opensearch-cluster-red-staging",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 1,
        "Dimensions": [
          {
            "Name": "ClientId",
            "Value": "123456789012",
          },
          {
            "Name": "DomainName",
            "Value": "opensearchshare-mhshucea3jvk",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ClusterStatus.red",
        "Namespace": "AWS/ES",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "OpenSearchJvmPressureAlarm9A9BC8E1": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "WarnTopicFEEED862",
          },
        ],
        "AlarmDescription": "OpenSearch JVM memory pressure > 85% for 15m (staging). GC pressure will cascade into query latency. Next: check shard count and query load on the dashboard; throttle heavy queries or scale the domain.",
        "AlarmName": "sps-opensearch-jvm-pressure-staging",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "Dimensions": [
          {
            "Name": "ClientId",
            "Value": "123456789012",
          },
          {
            "Name": "DomainName",
            "Value": "opensearchshare-mhshucea3jvk",
          },
        ],
        "EvaluationPeriods": 3,
        "MetricName": "JVMMemoryPressure",
        "Namespace": "AWS/ES",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 85,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "PublicAlb5xxRateAlarmC7D5139D": {
      "Properties": {
        "AlarmDescription": "Public ALB target 5xx rate exceeds 1% over 5m (staging). Burns the 99.5% availability SLO budget. See docs/SLOs.md. Next: check the ALB 5xx panel and the most recent deploy; roll back if the spike tracks a release, else pull app logs for the failing route.",
        "AlarmName": "sps-alb-5xx-rate-staging",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 2,
        "EvaluationPeriods": 2,
        "Metrics": [
          {
            "Expression": "IF(m5xx >= 5, (m5xx / IF(reqs > 0, reqs, 1)) * 100, 0)",
            "Id": "expr_1",
            "Label": "5xx rate (%) over 5m",
            "ReturnData": true,
          },
          {
            "Id": "m5xx",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "LoadBalancer",
                    "Value": "app/Sps-Ap-Publi-28Px8J5FO9hH/54dece3b8bad13da",
                  },
                ],
                "MetricName": "HTTPCode_Target_5XX_Count",
                "Namespace": "AWS/ApplicationELB",
              },
              "Period": 300,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
          {
            "Id": "reqs",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "LoadBalancer",
                    "Value": "app/Sps-Ap-Publi-28Px8J5FO9hH/54dece3b8bad13da",
                  },
                ],
                "MetricName": "RequestCount",
                "Namespace": "AWS/ApplicationELB",
              },
              "Period": 300,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "PublicAlbLatencyP99AlarmC30883BF": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "AlarmTopicD01E77F9",
          },
        ],
        "AlarmDescription": "Public ALB target response time p99 > 1500ms over 5m (staging). Burns the latency SLO budget. See docs/SLOs.md. Next: open the reliability dashboard latency and Aurora SelectLatency panels; look for a slow query, a cold cache, or an undersized task.",
        "AlarmName": "sps-alb-latency-p99-staging",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "Dimensions": [
          {
            "Name": "LoadBalancer",
            "Value": "app/Sps-Ap-Publi-28Px8J5FO9hH/54dece3b8bad13da",
          },
        ],
        "EvaluationPeriods": 3,
        "ExtendedStatistic": "p99",
        "MetricName": "TargetResponseTime",
        "Namespace": "AWS/ApplicationELB",
        "Period": 300,
        "Threshold": 1.5,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "PublicAlbUnhealthyHostsAlarm114335BE": {
      "Properties": {
        "AlarmDescription": "Public ALB has zero healthy targets for 5 consecutive minutes (staging). Circuit-breaker did not catch it -- real outage. Next: check ECS task health, the in-flight deploy, and the target-group health-check path.",
        "AlarmName": "sps-alb-unhealthy-hosts-staging",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "LoadBalancer",
            "Value": "app/Sps-Ap-Publi-28Px8J5FO9hH/54dece3b8bad13da",
          },
          {
            "Name": "TargetGroup",
            "Value": "targetgroup/Sps-Ap-Publi-VGHKKQ7XZH2E/7db931046bbc72ff",
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "UnHealthyHostCount",
        "Namespace": "AWS/ApplicationELB",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 0,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ReliabilityDashboard474761FC": {
      "Properties": {
        "DashboardBody": {
          "Fn::Join": [
            "",
            [
              "{"widgets":[{"type":"text","width":24,"height":2,"x":0,"y":0,"properties":{"markdown":"# SPS reliability -- staging\\nALB / CloudFront / ECS / Aurora. Read-only mirror of the page-topic alarms. See docs/SLOs.md."}},{"type":"text","width":24,"height":1,"x":0,"y":2,"properties":{"markdown":"## Public ALB"}},{"type":"metric","width":12,"height":6,"x":0,"y":3,"properties":{"view":"timeSeries","title":"ALB latency p50/p90/p99 (s)","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["AWS/ApplicationELB","TargetResponseTime","LoadBalancer","app/Sps-Ap-Publi-28Px8J5FO9hH/54dece3b8bad13da",{"label":"p50","stat":"p50"}],["AWS/ApplicationELB","TargetResponseTime","LoadBalancer","app/Sps-Ap-Publi-28Px8J5FO9hH/54dece3b8bad13da",{"label":"p90","stat":"p90"}],["AWS/ApplicationELB","TargetResponseTime","LoadBalancer","app/Sps-Ap-Publi-28Px8J5FO9hH/54dece3b8bad13da",{"label":"p99","stat":"p99"}]],"yAxis":{"left":{"min":0,"label":"seconds"}}}},{"type":"metric","width":12,"height":6,"x":12,"y":3,"properties":{"view":"timeSeries","title":"ALB requests + 5xx/4xx (5m sum)","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["AWS/ApplicationELB","RequestCount","LoadBalancer","app/Sps-Ap-Publi-28Px8J5FO9hH/54dece3b8bad13da",{"label":"Requests","stat":"Sum"}],["AWS/ApplicationELB","HTTPCode_Target_5XX_Count","LoadBalancer","app/Sps-Ap-Publi-28Px8J5FO9hH/54dece3b8bad13da",{"label":"Target 5xx","stat":"Sum","yAxis":"right"}],["AWS/ApplicationELB","HTTPCode_Target_4XX_Count","LoadBalancer","app/Sps-Ap-Publi-28Px8J5FO9hH/54dece3b8bad13da",{"label":"Target 4xx","stat":"Sum","yAxis":"right"}],["AWS/ApplicationELB","HTTPCode_ELB_5XX_Count","LoadBalancer","app/Sps-Ap-Publi-28Px8J5FO9hH/54dece3b8bad13da",{"label":"ELB 5xx","stat":"Sum","yAxis":"right"}]],"yAxis":{"left":{"min":0,"label":"requests"},"right":{"min":0,"label":"errors"}}}},{"type":"text","width":24,"height":1,"x":0,"y":9,"properties":{"markdown":"## CloudFront edge"}},{"type":"metric","width":8,"height":6,"x":0,"y":10,"properties":{"view":"timeSeries","title":"CloudFront origin latency (ms)","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["AWS/CloudFront","OriginLatency","DistributionId","E17NRWINXLP3B3","Region","Global",{"label":"Origin latency avg","region":"us-east-1"}],["AWS/CloudFront","OriginLatency","DistributionId","E17NRWINXLP3B3","Region","Global",{"label":"Origin latency p99","region":"us-east-1","stat":"p99"}]],"yAxis":{"left":{"min":0,"label":"ms"}}}},{"type":"metric","width":8,"height":6,"x":8,"y":10,"properties":{"view":"timeSeries","title":"CloudFront error rate (%) + requests","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["AWS/CloudFront","TotalErrorRate","DistributionId","E17NRWINXLP3B3","Region","Global",{"label":"Total error rate","region":"us-east-1"}],["AWS/CloudFront","4xxErrorRate","DistributionId","E17NRWINXLP3B3","Region","Global",{"label":"4xx rate","region":"us-east-1"}],["AWS/CloudFront","5xxErrorRate","DistributionId","E17NRWINXLP3B3","Region","Global",{"label":"5xx rate","region":"us-east-1"}],["AWS/CloudFront","Requests","DistributionId","E17NRWINXLP3B3","Region","Global",{"label":"Requests","region":"us-east-1","stat":"Sum","yAxis":"right"}]],"yAxis":{"left":{"min":0,"max":100,"label":"percent"},"right":{"min":0,"label":"requests"}}}},{"type":"metric","width":8,"height":6,"x":16,"y":10,"properties":{"view":"timeSeries","title":"CloudFront bytes downloaded (5m sum)","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["AWS/CloudFront","BytesDownloaded","DistributionId","E17NRWINXLP3B3","Region","Global",{"label":"Bytes downloaded","region":"us-east-1","stat":"Sum"}]],"yAxis":{"left":{"min":0,"label":"bytes"}}}},{"type":"text","width":24,"height":1,"x":0,"y":16,"properties":{"markdown":"## ECS service"}},{"type":"metric","width":12,"height":6,"x":0,"y":17,"properties":{"view":"timeSeries","title":"ECS CPU / Memory (%)","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["AWS/ECS","CPUUtilization","ClusterName","",
              {
                "Fn::ImportValue": "Sps-App-staging:ExportsOutputRefEcsCluster97242B84553A5D8F",
              },
              "","ServiceName","",
              {
                "Fn::ImportValue": "Sps-App-staging:ExportsOutputFnGetAttEcsService81FC6EF6Name1D81E5BE",
              },
              "",{"label":"CPU %"}],["AWS/ECS","MemoryUtilization","ClusterName","",
              {
                "Fn::ImportValue": "Sps-App-staging:ExportsOutputRefEcsCluster97242B84553A5D8F",
              },
              "","ServiceName","",
              {
                "Fn::ImportValue": "Sps-App-staging:ExportsOutputFnGetAttEcsService81FC6EF6Name1D81E5BE",
              },
              "",{"label":"Memory %"}]],"yAxis":{"left":{"min":0,"max":100,"label":"percent"}}}},{"type":"metric","width":12,"height":6,"x":12,"y":17,"properties":{"view":"timeSeries","title":"ECS running vs desired tasks","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["ECS/ContainerInsights","RunningTaskCount","ClusterName","",
              {
                "Fn::ImportValue": "Sps-App-staging:ExportsOutputRefEcsCluster97242B84553A5D8F",
              },
              "","ServiceName","",
              {
                "Fn::ImportValue": "Sps-App-staging:ExportsOutputFnGetAttEcsService81FC6EF6Name1D81E5BE",
              },
              "",{"label":"Running (min)","period":60,"stat":"Minimum"}],["ECS/ContainerInsights","DesiredTaskCount","ClusterName","",
              {
                "Fn::ImportValue": "Sps-App-staging:ExportsOutputRefEcsCluster97242B84553A5D8F",
              },
              "","ServiceName","",
              {
                "Fn::ImportValue": "Sps-App-staging:ExportsOutputFnGetAttEcsService81FC6EF6Name1D81E5BE",
              },
              "",{"label":"Desired (max)","period":60,"stat":"Maximum"}]],"yAxis":{"left":{"min":0,"label":"tasks"}}}},{"type":"text","width":24,"height":1,"x":0,"y":23,"properties":{"markdown":"## Aurora cluster"}},{"type":"metric","width":8,"height":6,"x":0,"y":24,"properties":{"view":"timeSeries","title":"Aurora CPU (%)","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["AWS/RDS","CPUUtilization","DBClusterIdentifier","sps-data-staging-auroraclusterfromsnapshot7b6a45d8-8kp4eh79cfrn",{"label":"CPU %"}]],"yAxis":{"left":{"min":0,"max":100,"label":"percent"}}}},{"type":"metric","width":8,"height":6,"x":8,"y":24,"properties":{"view":"timeSeries","title":"Aurora connections","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["AWS/RDS","DatabaseConnections","DBClusterIdentifier","sps-data-staging-auroraclusterfromsnapshot7b6a45d8-8kp4eh79cfrn",{"label":"Connections (max)","stat":"Maximum"}]],"yAxis":{"left":{"min":0,"label":"connections"}}}},{"type":"metric","width":8,"height":6,"x":16,"y":24,"properties":{"view":"timeSeries","title":"Aurora SelectLatency (ms)","region":"",
              {
                "Ref": "AWS::Region",
              },
              "","metrics":[["AWS/RDS","SelectLatency","DBClusterIdentifier","sps-data-staging-auroraclusterfromsnapshot7b6a45d8-8kp4eh79cfrn",{"label":"Select latency"}]],"yAxis":{"left":{"min":0,"label":"ms"}}}}]}",
            ],
          ],
        },
        "DashboardName": "sps-reliability-staging",
      },
      "Type": "AWS::CloudWatch::Dashboard",
    },
    "WarnTopicFEEED862": {
      "Properties": {
        "DisplayName": "SPS staging warnings (P2)",
        "TopicName": "sps-warn-staging",
      },
      "Type": "AWS::SNS::Topic",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
